log/build_2025-03-23_23-52-05/ti_es_temperature_humidity_package/stdout_stderr.log
running egg_info
writing build/ti_es_temperature_humidity_package/ti_es_temperature_humidity_package.egg-info/PKG-INFO
writing dependency_links to build/ti_es_temperature_humidity_package/ti_es_temperature_humidity_package.egg-info/dependency_links.txt
writing entry points to build/ti_es_temperature_humidity_package/ti_es_temperature_humidity_package.egg-info/entry_points.txt
writing requirements to build/ti_es_temperature_humidity_package/ti_es_temperature_humidity_package.egg-info/requires.txt
writing top-level names to build/ti_es_temperature_humidity_package/ti_es_temperature_humidity_package.egg-info/top_level.txt
reading manifest file 'build/ti_es_temperature_humidity_package/ti_es_temperature_humidity_package.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file 'build/ti_es_temperature_humidity_package/ti_es_temperature_humidity_package.egg-info/SOURCES.txt'
running build
running build_py
copying ti_es_temperature_humidity_package/ti_es_temperature_humidity_node.py -> /home/david/tinlabs_project/src/ti_es_temperature_humidity_package/build/ti_es_temperature_humidity_package/build/lib/ti_es_temperature_humidity_package
running install
running install_lib
copying /home/david/tinlabs_project/src/ti_es_temperature_humidity_package/build/ti_es_temperature_humidity_package/build/lib/ti_es_temperature_humidity_package/ti_es_temperature_humidity_node.py -> /home/david/tinlabs_project/src/ti_es_temperature_humidity_package/install/ti_es_temperature_humidity_package/lib/python3.12/site-packages/ti_es_temperature_humidity_package
byte-compiling /home/david/tinlabs_project/src/ti_es_temperature_humidity_package/install/ti_es_temperature_humidity_package/lib/python3.12/site-packages/ti_es_temperature_humidity_package/ti_es_temperature_humidity_node.py to ti_es_temperature_humidity_node.cpython-312.pyc
  File "/home/david/tinlabs_project/src/ti_es_temperature_humidity_package/install/ti_es_temperature_humidity_package/lib/python3.12/site-packages/ti_es_temperature_humidity_package/ti_es_temperature_humidity_node.py", line 1
    from smbus
              ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/david/tinlabs_project/src/ti_es_temperature_humidity_package/install/ti_es_temperature_humidity_package/lib/python3.12/site-packages/ti_es_temperature_humidity_package-0.0.0-py3.12.egg-info' (and everything under it)
Copying build/ti_es_temperature_humidity_package/ti_es_temperature_humidity_package.egg-info to /home/david/tinlabs_project/src/ti_es_temperature_humidity_package/install/ti_es_temperature_humidity_package/lib/python3.12/site-packages/ti_es_temperature_humidity_package-0.0.0-py3.12.egg-info
running install_scripts
Installing ti_es_temperature_humidity_node script to /home/david/tinlabs_project/src/ti_es_temperature_humidity_package/install/ti_es_temperature_humidity_package/lib/ti_es_temperature_humidity_package
writing list of installed files to '/home/david/tinlabs_project/src/ti_es_temperature_humidity_package/build/ti_es_temperature_humidity_package/install.log'
